# dcAudioGraph

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dcAudioGraph/: AudioBuffer.cpp  AudioBuffer.h  ControlBuffer.cpp  ControlBuffer.h  EventBuffer.cpp  EventBuffer.h  Gain.cpp  Gain.h  Graph.cpp  Graph.h  Graph2.cpp  Graph2.h  GraphModule.cpp  GraphModule.h  LevelMeter.cpp  LevelMeter.h  MessageQueue.h  Module.cpp  Module.h  Module2.cpp  Module2.h  ModuleFactory.cpp  ModuleFactory.h  ModuleParam.cpp  ModuleParam.h  ModuleProcessor.cpp  ModuleProcessor.h  Serialization.cpp  Serialization.h  Transport.cpp  Transport.h  dcAudioGraph.cpp  dcAudioGraph.h
dcAudioGraph/Modules/: GraphModule.cpp  GraphModule.h
examples/passthrough/: main.cpp
lib/: AudioBuffer.cpp  AudioBuffer.h  CMakeLists.txt  Graph.cpp  Graph.h  GraphModule.cpp  GraphModule.h  Module.cpp  Module.h
test/: CMakeLists.txt  Test_Buffer.cpp  Test_Common.cpp  Test_Common.h  Test_LevelMeter.cpp  catch.h  test_Graph.cpp  tests.cpp
